apps/authentik/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    name: authentik
    toolkit.fluxcd.io/tenant: homelab
